tests/workflows/tests/snapshots/skills__skills_add_json_installation_envelope.snap
---
source: tests/workflows/tests/skills.rs
expression: json
---
{
  "success": true,
  "action": "add",
  "source": "[local skill source]",
  "scope": "project",
  "skills": [
    {
      "id": "find-skills--6c99b3685e21",
      "name": "find-skills",
      "description": "Finds and installs useful agent skills",
      "source": "[local skill source]",
      "source_kind": "local",
      "ownership": "managed",
      "resolved_revision": null,
      "scope": "project",
      "enabled": true,
      "agents": [
        {
          "name": "codex",
          "enabled": true,
          "copied": false
        }
      ],
      "estimated_tokens": 40,
      "size_bytes": 158
    }
  ],
  "count": 1,
  "duration_ms": "[duration]"
}
