tests/workflows/tests/snapshots/skills__skills_add_managed.snap
---
source: tests/workflows/tests/skills.rs
expression: envelope
---
{
  "success": true,
  "kind": "managed",
  "installed": [
    "release-notes"
  ],
  "scope": "project",
  "agents": [
    "codex"
  ],
  "source": {
    "kind": "local",
    "path": "[project]/team-skills",
    "digest": "04a4499912b76d5e76efa5a01a17a5f533330fc275ceab7dd24a4b44550e79a3"
  },
  "skills": [
    {
      "name": "release-notes",
      "description": "A useful release-notes skill for workflow testing",
      "path": "release-notes",
      "context_tokens": 38,
      "security_findings": [],
      "compatible_agents": [
        "codex",
        "claude-code",
        "cursor"
      ]
    }
  ],
  "changes": [
    {
      "action": "write managed content",
      "path": "[project]/.lpm/managed-skills/sources/[source-id]/04a4499912b76d5e76efa5a01a17a5f533330fc275ceab7dd24a4b44550e79a3/release-notes"
    },
    {
      "action": "link agent skill",
      "path": "[project]/.agents/skills/release-notes"
    }
  ]
}
