tests/workflows/tests/snapshots/skills__skills_clean_empty.snap
---
source: tests/workflows/tests/skills.rs
expression: envelope
---
{
  "success": true,
  "cleaned": false,
  "files_removed": 0
}
