tests/workflows/tests/snapshots/skills__skills_dashboard_startup.snap
---
source: tests/workflows/tests/skills.rs
expression: dashboard.startup
---
{
  "success": true,
  "url": "[dashboard-url]",
  "display_url": "[dashboard-display-url]",
  "port": "[dashboard-port]",
  "includes_global": false,
  "read_only": true
}
