tests/workflows/tests/snapshots/skills__skills_disable_applied.snap
---
source: tests/workflows/tests/skills.rs
expression: disable
---
{
  "success": true,
  "dry_run": false,
  "changes": [
    {
      "action": "disable managed target",
      "path": "[project]/.agents/skills/release-notes"
    }
  ]
}
