tests/workflows/tests/snapshots/skills__skills_enable_applied.snap
---
source: tests/workflows/tests/skills.rs
expression: enable
---
{
  "success": true,
  "dry_run": false,
  "changes": [
    {
      "action": "enable managed target",
      "path": "[project]/.agents/skills/release-notes"
    }
  ]
}
