tests/workflows/tests/snapshots/skills__skills_prune_no_op.snap
---
source: tests/workflows/tests/skills.rs
expression: prune
---
{
  "success": true,
  "dry_run": false,
  "changes": []
}
