tests/workflows/tests/snapshots/skills__skills_update_preview.snap
---
source: tests/workflows/tests/skills.rs
expression: update_preview
---
{
  "success": true,
  "dry_run": true,
  "updates": [
    {
      "name": "release-notes",
      "diff": "--- original\n+++ modified\n@@ -4,4 +4,4 @@\n description: A useful release-notes skill for workflow testing\n ---\n\n-Summarize the relevant commits into concise release notes.\n+Summarize commits and include migration guidance.\n",
      "security_findings_before": 0,
      "security_findings_after": 0,
      "new_security_findings": []
    }
  ],
  "changes": [
    {
      "action": "write managed content",
      "path": "[project]/.lpm/managed-skills/sources/[source-id]/d83fc78bdc406324369aa654a27e2a8ef152e84ce2f9a6d0fcb756826ebfc202/release-notes"
    },
    {
      "action": "link agent skill",
      "path": "[project]/.agents/skills/release-notes"
    }
  ]
}
