tests/workflows/tests/snapshots/skills__skills_validate_empty.snap
---
source: tests/workflows/tests/skills.rs
expression: envelope
---
{
  "success": true,
  "valid": 0,
  "errors": [],
  "quality_impact": 0
}
